# rust_servers-service-and_apps

eztutors/: Cargo.toml  hello.txt
eztutors/actix_base_error_handling/: Cargo.toml  hello.txt
eztutors/actix_base_error_handling/src/: main.rs
eztutors/async-hello/: Cargo.toml
eztutors/async-hello/src/: main.rs
eztutors/custom-future/: Cargo.toml
eztutors/custom-future/src/: main.rs
eztutors/tutor-nodb/: Cargo.toml
eztutors/tutor-nodb/src/: handlers.rs  models.rs  routes.rs  state.rs
eztutors/tutor-web-app-ssr/: .env  Cargo.toml
eztutors/tutor-web-app-ssr/src/iter5/: errors.rs  handlers.rs  models.rs  routes.rs
eztutors/tutor-web-app-ssr/src/iter5/dbscripts/: user.sql
eztutors/tutor-web-app-ssr/src/iter6/: dbaccess.rs  mod.rs  models.rs  routes.rs
eztutors/tutor-web-app-ssr/src/iter6/handlers/: auth.rs  course.rs
eztutors/tutor-web-app-ssr/static/: styles.css
eztutors/tutor-web-app-ssr/static/iter1/: index.html
eztutors/tutor-web-app-ssr/static/iter2/: form.html  user.html
eztutors/tutor-web-app-ssr/static/iter3/: list.html
eztutors/tutor-web-app-ssr/static/iter4/: list.html
eztutors/tutor-web-app-ssr/static/iter5/: register.html
eztutors/tutor-web-app-ssr/static/iter6/: signin.html  tutor-styles.css
eztutors/tutor-web-service/: .env  Cargo.toml
eztutors/tutor-web-service/src/: database.sql  main.rs
eztutors/tutor-web-service/src/iter2/: handlers.rs  mod.rs  models.rs
eztutors/tutor-web-service/src/iter3/: db_access.rs  handlers.rs
eztutors/tutor-web-service/src/iter4/: db_access.rs  errors.rs  handlers.rs  routes.rs
eztutors/tutor-web-service/src/iter5/: errors.rs  routes.rs
eztutors/tutor-web-service/src/iter5/dbaccess/: course.rs  tutor.rs
eztutors/tutor-web-service/src/iter5/dbscripts/: course.sql
eztutors/tutor-web-service/src/iter5/handlers/: course.rs  general.rs  tutor.rs
eztutors/tutor-web-service/src/iter5/models/: course.rs  tutor.rs
scenario1/http/src/: httprequest.rs  httpresponse.rs  lib.rs
scenario1/httpserver/: Cargo.toml
scenario1/httpserver/public/: 404.html  health.html  index.html
scenario1/httpserver/src/: handler.rs  main.rs  router.rs  server.rs
(+3 files in other folders)
