[package]
name = "tutor-web-app-ssr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.5"
actix-web = "4.6.0"
awc = { version = "3.5.0", features = ["openssl"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tera = "1.20.0"
sqlx = { version = "0.7.4", default-features = false, features = ["postgres", "runtime-tokio", "macros", "chrono"] }
dotenv = "0.15.0"
rust-argon2 = "2.1.0"

[dev-dependencies]
actix-rt = "2.9.0"
