[package]
name = "tutor-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.9.0"
actix-web = "4.6.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
openssl = { version = "0.10.64", features = ["vendored"] }
serde = { version = "1.0.203", features = ["derive"] }
sqlx = { version = "0.7.4", default-features = false, features = ["postgres", "runtime-tokio", "macros", "chrono"] }
